# liqwid-libs

./: .gitignore  CHANGELOG.md  Makefile  README.md  STANDARDS.md  _typos.toml  cabal.project  default.nix  flake-module.nix  flake.nix  fourmolu.yaml  liqwid-plutarch-extra.cabal  liqwid-script-export.cabal  plutarch-benchmark.cabal  plutarch-context-builder.cabal  plutarch-quickcheck.cabal  plutarch-script-export.cabal  plutarch-unit.cabal  shell.nix
.github/: format.sh
.github/workflows/: integrate.yaml  integrate.yml
Test/Benchmark/: Common.hs  Cost.hs  Main.hs  Plutarch.hs  Plutus.hs  Sized.hs
bench/sorting/: Main.hs  PComparator.hs  POrdering.hs
example/: Main.hs  README.md
examples/handlers-tests/: Main.hs
examples/natural-tests/: Main.hs
examples/square-tests/: Main.hs
examples/zip-tests/: Main.hs
export-stat/: Main.hs
liqwid-plutarch-extra/: .gitignore  CHANGELOG.md  Makefile  README.md  liqwid-plutarch-extra.cabal
liqwid-plutarch-extra/bench/sorting/: Main.hs
liqwid-plutarch-extra/src/Plutarch/: Orphans.hs
liqwid-plutarch-extra/src/Plutarch/Extra/: Applicative.hs  AssetClass.hs  Bind.hs  Bool.hs  Boring.hs  Comonad.hs  Compile.hs  Const.hs  DebuggableScript.hs  Deriving.hs  ExtendedAssetClass.hs  Field.hs  Fixed.hs  FixedDecimal.hs  Functor.hs  Identity.hs  IsData.hs  List.hs  Map.hs  Monoid.hs  MultiSig.hs  Numeric.hs  Ord.hs  Precompile.hs  Rational.hs  Record.hs  Script.hs  ScriptContext.hs  Star.hs  State.hs  StateThread.hs  Sum.hs  Tagged.hs  TermCont.hs  These.hs  Time.hs  Traversable.hs  Tuple.hs  Value.hs
liqwid-plutarch-extra/test/: FunctorProp.hs  Main.hs  NumericProp.hs  TraversableProp.hs  ValueProp.hs
liqwid-script-export/: CHANGELOG.md  Makefile  README.md  cabal.project  liqwid-script-export.cabal  nixos-module.nix
liqwid-script-export/example/: Main.hs  README.md
liqwid-script-export/export-stat/: Main.hs
liqwid-script-export/src/Codec/Serialise/: Orphans.hs
liqwid-script-export/src/ScriptExport/: API.hs  Export.hs  File.hs  Options.hs  ScriptInfo.hs  Stdout.hs  Types.hs
nix/: packages.nix  pre-commit.nix  project.nix  shell.nix
plutarch-benchmark/: CHANGELOG.md  Makefile  cabal.project  plutarch-benchmark.cabal
plutarch-benchmark/src/Plutarch/Benchmark/: Common.hs  Cost.hs  Main.hs  Orphans.hs  Plutarch.hs  Plutus.hs  QuickCheck.hs  Sized.hs
plutarch-benchmark/test/: Main.hs
plutarch-context-builder/: .gitignore  CHANGELOG.md  LICENSE  plutarch-context-builder.cabal
plutarch-context-builder/sample/: Main.hs
plutarch-context-builder/src/Plutarch/Context/: Base.hs  Certifying.hs  Check.hs  Internal.hs  Minting.hs  Rewarding.hs  Spending.hs  TxInfo.hs
plutarch-quickcheck/: .gitignore  CHANGELOG.md  Makefile  cabal.project  flake.nix  plutarch-quickcheck.cabal
plutarch-quickcheck/sample/reverse-test/: Main.hs
plutarch-quickcheck/sample/validator-test/: Main.hs
plutarch-quickcheck/sample/zip-test/: Main.hs
plutarch-quickcheck/src/Plutarch/Test/: QuickCheck.hs
plutarch-quickcheck/src/Plutarch/Test/QuickCheck/: Function.hs  Helpers.hs  Instances.hs  Internal.hs  Modifiers.hs
plutarch-quickcheck/test/instances/: Main.hs
plutarch-unit/: CHANGELOG.md  README.md  plutarch-unit.cabal
plutarch-unit/sample/: Main.hs
plutarch-unit/src/Plutarch/Test/: Export.hs  Precompiled.hs  Script.hs  Unit.hs
sample/: Main.hs  MintingBuilder.hs  SpendingBuilder.hs
sample/reverse-test/: Main.hs
sample/validator-test/: Main.hs
sample/zip-test/: Main.hs
src/: PPrelude.hs
src/Aeson/: Orphans.hs
src/Codec/Serialise/: Orphans.hs
src/Data/Cache/: Cached.hs
src/Plutarch/: Context.hs  Orphans.hs
src/Plutarch/Api/V1/: AssetClass.hs  ScriptContext.hs  Value.hs
src/Plutarch/Api/V1/Value/: Unsorted.hs
src/Plutarch/Benchmark/: Common.hs  Cost.hs  Exhaustive.hs  Main.hs  Plutarch.hs  Plutus.hs  QuickCheck.hs  Sized.hs
src/Plutarch/Context/: Base.hs  Certifying.hs  Check.hs  Config.hs  Internal.hs  Minting.hs  Phase1.hs  Rewarding.hs  Spending.hs  SubBuilder.hs  TxInfo.hs
src/Plutarch/Extra/: Applicative.hs  AssetClass.hs  Bind.hs  Bool.hs  Boost.hs  Boring.hs  Category.hs  Comonad.hs  Compile.hs  Const.hs  DScript.hs  DebuggableScript.hs  Deriving.hs  ExchangeRate.hs  ExtendedAssetClass.hs  Field.hs  Fixed.hs  FixedDecimal.hs  Float.hs  Function.hs  Functor.hs  Identity.hs  IsData.hs  List.hs  Map.hs  Maybe.hs  Monoid.hs  MultiSig.hs  Numeric.hs  Optics.hs  Ord.hs  Other.hs  Precompile.hs  Profunctor.hs  Rational.hs  Record.hs  Script.hs  ScriptContext.hs  Star.hs  State.hs  (+9 more)
src/Plutarch/Extra/Map/: Sorted.hs  Unsorted.hs
src/Plutarch/Extra/Units/: DataAssetClass.hs  Quantity.hs  Rational.hs  ScottAssetClass.hs
src/Plutarch/Extra/Value/: Unsorted.hs
src/Plutarch/Numeric/: Additive.hs
src/Plutarch/Test/: Export.hs  Precompiled.hs  QuickCheck.hs  Script.hs  Unit.hs
src/Plutarch/Test/QuickCheck/: Function.hs  Helpers.hs  Instances.hs  Internal.hs  Modifiers.hs
src/ScriptExport/: API.hs  Export.hs  File.hs  Options.hs  ScriptInfo.hs  Types.hs
src/Test/Benchmark/: Common.hs  Cost.hs  DScript.hs  Exhaustive.hs  Main.hs  PTouch.hs  Plutarch.hs  Plutus.hs  Precompile.hs  Precompile2.hs  QuickCheck.hs  Sized.hs
src/Test/Tasty/Plutarch/: Helpers.hs  Instances.hs  Laws.hs  Property.hs
test/: BaseBuilder.hs  Main.hs  Minting.hs  NumericProp.hs  OrdProp.hs  Spec.hs  Spending.hs  TraversableProp.hs
test/Properties/: FunctorProp.hs  NumericProp.hs  OrdProp.hs  TraversableProp.hs
test/Spec/: Utils.hs
test/Spec/Api/V1/: Value.hs
test/Spec/Api/V1/Value/: Unsorted.hs
test/Spec/Extra/: List.hs  Map.hs  MultiSig.hs  Traversable.hs
test/Spec/Extra/Map/: Sorted.hs  Unsorted.hs
test/instances/: Helpers.hs  LedgerBytes.hs  Main.hs  Value.hs
test/old/: Spec.hs
test/old/Spec/: Utils.hs
test/old/Spec/Extra/: List.hs  Map.hs  MultiSig.hs  Traversable.hs
test/old/Spec/Extra/Map/: Sorted.hs
test/properties/: Main.hs
