cabal-version:      3.0
name:               liqwid-plutarch-extra
version:            1.2.0
synopsis:           A collection of Plutarch extras from Liqwid Labs
description:        Several useful data types and functions for Plutarch.
homepage:           https://github.com/Liqwid-Labs/liqwid-plutarch-extra
bug-reports:        https://github.com/Liqwid-Labs/liqwid-plutarch-extra/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Koz Ross
maintainer:         Koz Ross <koz@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/liqwid-plutarch-extra

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror
    -Wno-partial-type-signatures

  build-depends:
    , base               ^>=4.16
    , plutarch
    , plutus-ledger-api
    , plutus-tx

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules:
    Plutarch.Api.V1.AssetClass
    Plutarch.Api.V1.ScriptContext
    Plutarch.Api.V1.Value
    Plutarch.Api.V1.Value.Unsorted
    Plutarch.Extra.Applicative
    Plutarch.Extra.Bool
    Plutarch.Extra.Boring
    Plutarch.Extra.Category
    Plutarch.Extra.Comonad
    Plutarch.Extra.Const
    Plutarch.Extra.FixedDecimal
    Plutarch.Extra.Function
    Plutarch.Extra.Functor
    Plutarch.Extra.Identity
    Plutarch.Extra.IsData
    Plutarch.Extra.List
    Plutarch.Extra.Map
    Plutarch.Extra.Map.Sorted
    Plutarch.Extra.Map.Unsorted
    Plutarch.Extra.Maybe
    Plutarch.Extra.Numeric
    Plutarch.Extra.Other
    Plutarch.Extra.Profunctor
    Plutarch.Extra.Record
    Plutarch.Extra.State
    Plutarch.Extra.Sum
    Plutarch.Extra.Tagged
    Plutarch.Extra.TermCont
    Plutarch.Extra.These
    Plutarch.Extra.Traversable

  build-depends:
    , generics-sop
    , plutarch-extra
    , plutarch-numeric
    , tagged

  hs-source-dirs:  src

test-suite liqwid-plutarch-extra-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , containers
    , liqwid-plutarch-extra
    , mtl
    , plutarch-quickcheck
    , plutus-core
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , universe

  other-modules:
    Spec.Api.V1.Value
    Spec.Api.V1.Value.Unsorted
    Spec.Extra.List
    Spec.Extra.Map
    Spec.Extra.Map.Sorted
    Spec.Extra.Map.Unsorted
    Spec.Extra.Traversable
    Spec.Utils

  hs-source-dirs: test
