cabal-version:      3.0
name:               plutarch-quickcheck
version:            1.0.2
synopsis:           Helpers for property testing plutarch
description:
  Contains several helpers for law checks of Plutarch type classes, as well as 
  helpers for property test writing. Some orphan instances useful for Plutarch 
  property writing are also included.

homepage:           https://github.com/Liqwid-Labs/plutarch-quickcheck
bug-reports:        https://github.com/Liqwid-Labs/plutarch-quickcheck/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Koz Ross
maintainer:         Koz Ross <koz@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/plutarch-quickcheck

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror

  build-depends:
    , base      ^>=4.16
    , plutarch

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  default-language:   Haskell2010

common common-tests
  import:        common-lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , plutarch
    , plutarch-quickcheck
    , QuickCheck
    , tagged
    , tasty
    , tasty-expected-failure
    , tasty-quickcheck
    , universe

-- Libraries

library
  import:          common-lang
  exposed-modules:
    Test.Tasty.Plutarch.Instances
    Test.Tasty.Plutarch.Laws
    Test.Tasty.Plutarch.Property

  other-modules:   Test.Tasty.Plutarch.Helpers
  build-depends:
    , bytestring
    , plutus-core
    , plutus-ledger-api
    , pretty
    , pretty-show
    , QuickCheck
    , tagged
    , tasty
    , tasty-quickcheck
    , text
    , universe

  hs-source-dirs:  src

-- Test suites

test-suite square-tests
  import:         common-tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples/square-tests

test-suite zip-tests
  import:         common-tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples/zip-tests

test-suite natural-tests
  import:         common-tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples/natural-tests

test-suite handlers-tests
  import:         common-tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples/handlers-tests
