cabal-version:      3.0
name:               plutarch-quickcheck
version:            2.1.0
synopsis:           Quickcheck for Plutarch.
description:
  Bridge between QuickCheck and Plutarch. The interfaces provide
  easy ways to construct properties about Plutarch functions.

homepage:           https://github.com/Liqwid-Labs/plutarch-quickcheck
bug-reports:        https://github.com/Liqwid-Labs/plutarch-quickcheck/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Seungheon Oh
maintainer:         Seungheon Oh <seungheon@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/plutarch-quickcheck

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  build-depends:
    , base      ^>=4.16
    , plutarch

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  default-language:   Haskell2010

common common-tests
  ghc-options:
  build-depends:
    , base                    ^>=4.16
    , bytestring
    , generics-sop
    , plutarch
    , plutarch-quickcheck
    , QuickCheck
    , tasty
    , tasty-expected-failure
    , tasty-quickcheck

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  default-language:   Haskell2010  

-- Libraries

library
  import:          common-lang
  exposed-modules: Plutarch.Test.QuickCheck
  other-modules:
    Plutarch.Extra.Maybe
    Plutarch.Test.QuickCheck.Function
    Plutarch.Test.QuickCheck.Helpers
    Plutarch.Test.QuickCheck.Instances

  build-depends:
    , bytestring
    , containers
    , data-default
    , generics-sop
    , mtl
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , tagged
    , tasty
    , tasty-expected-failure
    , tasty-quickcheck
    , text
    , universe

  hs-source-dirs:  src

-- Tests

test-suite reverse-test
  import:
    common-tests,
    common-lang

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: sample/reverse-test

test-suite zip-test
  import:
    common-tests,
    common-lang

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: sample/zip-test
