cabal-version:      3.0
name:               plutarch-script-export
version:            1.0.0
extra-source-files: CHANGELOG.md
author:             Emily Martins <emi@haskell.fyi>
license:            Apache-2.0

--------------------------------------------------------------------------------
-- Common Stanza Declarations

-- Language options, warnings, some options for plutus

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    OverloadedRecordDot

  default-language:   Haskell2010

common deps
  build-depends:
    , aeson
    , ansi-terminal
    , base                  >=4.14 && <5
    , base-compat
    , base16
    , bytestring
    , cache
    , cardano-binary
    , clock
    , containers
    , data-default
    , data-default-class
    , generics-sop
    , gitrev
    , hashable
    , http-types
    , optparse-applicative
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , recursion-schemes
    , serialise
    , servant
    , servant-server
    , tagged
    , template-haskell
    , text
    , wai
    , wai-cors
    , warp

  mixins:

library
  import:          lang, deps
  hs-source-dirs:  src
  exposed-modules:
    ScriptExport.API
    ScriptExport.Options
    ScriptExport.ScriptInfo
    ScriptExport.Types

  other-modules:
    Aeson.Orphans
    Codec.Serialise.Orphans
    Data.Cache.Cached

executable example
  import:         lang, deps
  hs-source-dirs: example
  main-is:        Main.hs
  build-depends:  plutarch-script-export
