cabal-version:      3.0
name:               liqwid-plutarch-extra
version:            3.21.1
synopsis:           A collection of Plutarch extras from Liqwid Labs
description:        Several useful data types and functions for Plutarch.
homepage:           https://github.com/Liqwid-Labs/liqwid-plutarch-extra
bug-reports:        https://github.com/Liqwid-Labs/liqwid-plutarch-extra/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Koz Ross
maintainer:         Koz Ross <koz@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.5
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/liqwid-plutarch-extra

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror
    -Wno-partial-type-signatures

  mixins:
    base hiding (Prelude),
    pprelude (PPrelude as Prelude)

  build-depends:
    , base
    , plutarch
    , plutus-ledger-api
    , plutus-tx
    , pprelude

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    NoFieldSelectors

  default-language:   Haskell2010

-- Libraries

library pprelude
  default-language: Haskell2010
  exposed-modules:  PPrelude
  hs-source-dirs:   src
  build-depends:
    , base
    , plutarch

library
  import:          common-lang
  exposed-modules:
    Plutarch.Extra.Applicative
    Plutarch.Extra.AssetClass
    Plutarch.Extra.Bind
    Plutarch.Extra.Bool
    Plutarch.Extra.Boring
    Plutarch.Extra.Category
    Plutarch.Extra.Comonad
    Plutarch.Extra.Compile
    Plutarch.Extra.Const
    Plutarch.Extra.DebuggableScript
    Plutarch.Extra.Deriving
    Plutarch.Extra.ExchangeRate
    Plutarch.Extra.ExtendedAssetClass
    Plutarch.Extra.Field
    Plutarch.Extra.Fixed
    Plutarch.Extra.FixedDecimal
    Plutarch.Extra.Function
    Plutarch.Extra.Functor
    Plutarch.Extra.Identity
    Plutarch.Extra.IsData
    Plutarch.Extra.List
    Plutarch.Extra.Map
    Plutarch.Extra.Monoid
    Plutarch.Extra.MultiSig
    Plutarch.Extra.Numeric
    Plutarch.Extra.Optics
    Plutarch.Extra.Ord
    Plutarch.Extra.Precompile
    Plutarch.Extra.Profunctor
    Plutarch.Extra.Rational
    Plutarch.Extra.Record
    Plutarch.Extra.Script
    Plutarch.Extra.ScriptContext
    Plutarch.Extra.Star
    Plutarch.Extra.State
    Plutarch.Extra.StateThread
    Plutarch.Extra.Sum
    Plutarch.Extra.Tagged
    Plutarch.Extra.TermCont
    Plutarch.Extra.These
    Plutarch.Extra.Time
    Plutarch.Extra.Traversable
    Plutarch.Extra.Tuple
    Plutarch.Extra.Value
    Plutarch.Numeric.Additive
    Plutarch.Orphans

  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , composition-prelude
    , containers
    , data-default
    , deepseq
    , generics-sop
    , lens
    , mtl
    , optics-core
    , optics-th
    , plutarch-extra
    , plutarch-quickcheck
    , plutus-core
    , ply-core
    , ply-plutarch
    , QuickCheck
    , serialise
    , tagged
    , text
    , vector

  hs-source-dirs:  src

-- Test suite

test-suite test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    FunctorProp
    NumericProp
    OrdProp
    TraversableProp
    ValueProp

  build-depends:
    , liqwid-plutarch-extra
    , plutarch-extra
    , plutarch-quickcheck
    , QuickCheck
    , tasty
    , tasty-quickcheck

  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: test

-- Benchmarks

benchmark sorting
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    PComparator
    POrdering

  build-depends:
    , data-default
    , liqwid-plutarch-extra
    , plutus-core
    , tagged
    , tasty
    , text

  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: bench/sorting
