cabal-version:      3.0
name:               liqwid-script-export
version:            2.3.0
extra-source-files: CHANGELOG.md
author:             Emily Martins <emi@haskell.fyi>
license:            Apache-2.0

--------------------------------------------------------------------------------
-- Common Stanza Declarations

-- Language options, warnings, some options for plutus

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    NoFieldSelectors

  default-language:   Haskell2010

common deps
  build-depends:
    , aeson
    , aeson-pretty
    , ansi-terminal
    , base                   >=4.14 && <5
    , base-compat
    , base16
    , bytestring
    , cache
    , cardano-binary
    , clock
    , containers
    , data-default
    , data-default-class
    , filepath
    , generics-sop
    , hashable
    , http-types
    , liqwid-plutarch-extra
    , mtl
    , optics
    , optics-th
    , optparse-applicative
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , ply-plutarch
    , prettyprinter
    , recursion-schemes
    , serialise
    , servant
    , servant-server
    , tagged
    , template-haskell
    , text
    , unix
    , wai
    , wai-cors
    , warp

  mixins:

library
  import:          lang, deps
  hs-source-dirs:  src
  exposed-modules:
    ScriptExport.API
    ScriptExport.Export
    ScriptExport.File
    ScriptExport.Options
    ScriptExport.ScriptInfo
    ScriptExport.Stdout
    ScriptExport.Types

  other-modules:
    Codec.Serialise.Orphans
    Data.Cache.Cached

executable export-stat
  import:         lang, deps
  hs-source-dirs: export-stat
  main-is:        Main.hs
  build-depends:  liqwid-script-export

executable example
  import:         lang, deps
  hs-source-dirs: example
  main-is:        Main.hs
  build-depends:  liqwid-script-export
